--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     }
 
     .ui {
+
       position: absolute;
       top: 15px;
       left: 15px;
@@ -71,6 +72,7 @@
 
     <!-- Buttons -->
     <div class="ui">
+      <button id="startBtn">Start Camera</button>
       <button id="clearBtn">Clear Canvas</button>
     </div>
 
