--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   </div>
 
   <!-- Link to JavaScript -->
-  <script type="module" src="./main.js"></script>
+  <script type="module" src="./main.js?v=4"></script>
 
 </body>
 </html>
