--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <!-- Instructions -->
     <div class="instructions">
       ✋ Pinch (thumb + index) to draw<br>
-      ✊ Make a fist to erase
+      ✋ Use your palm to erase
     </div>
 
   </div>
